DocImport 1.1.0
================================================================================
- Dropped Joomla! 2.5 compatibility
- Removed dysfunctional URL cache
+ Check for obsolete PHP versions and printing a warning
+ You can configure an alternate directory for your XML books
# [LOW] Improved display of back-end lists
# [HIGH] Problems when artcile slugs begin with the same string, e.g. "foo" and "foobar"

DocImport 1.0.13
================================================================================
+ Compatibility with Joomla! 3.4
~ Changed the .htaccess files to be compatible with Apache 2.4
# [LOW] Raise a 404 error if requesting an article that doesn't exist
# [MEDIUM] DocBook cross-references without a .html suffix were not replaced, leading to broken links

DocImport 1.0.12
================================================================================
# [LOW] gh-16 Highlight was always loaded from HTTP, even on HTTPS sites

DocImport 1.0.11
================================================================================
! Images not shown in generated articles due to changes in the upgraded DocBook XSL stylesheets (previous fix didn't work on some sites)

DocImport 1.0.10
================================================================================
! Images not shown in generated articles due to changes in the upgraded DocBook XSL stylesheets

DocImport 1.0.9
================================================================================
! CLI scripts were not being copied over
+ Added support for automatic update notification and installation
+ Allow you to put books inside /media/com_docimport/books for better organisation
+ Allow syntax highlighting in programlisting via the language attribute. See https://github.com/isagalaev/highlight.js/tree/master/src/languages for supported language names (php, bash, css, apache, nginx, xml, diff, ini, json, markdown and sql are among them).
~ Updating DBXSL stylesheets to 1.78.1